# motofw

./: .gitignore  ANALYSIS.md  MANIFEST.in  README.md  USAGE.md  config.ini.example  device.ini.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/agents/: motofw-architect.agent.md
.github/workflows/: copilot-setup-steps.yml
docs/: README-mcp-repository-settings.md  mcp-repository-settings.json  ota_protocol_findings.md  protocol_findings.md
motofw/: __init__.py  __main__.py  api.py  cli.py  client.py  config.py  crypto.py  device.py  device_info.py  downloader.py  models.py  ota.py  parser.py  request_builder.py  response_parser.py
motofw/src/: __init__.py
motofw/src/api/: __init__.py  body.py  headers.py  orchestrator.py  request.py  response.py  scanner.py  session.py  urls.py
motofw/src/cli/: __init__.py  commands.py  log.py  output.py  parser.py
motofw/src/config/: __init__.py  defaults.py  loader.py  options.py  settings.py
motofw/src/crypto/: __init__.py  sha.py
motofw/src/device/: __init__.py  adb.py  builder.py  config.py  info.py  properties.py  reader.py
motofw/src/download/: __init__.py  checksum.py  filename.py  manager.py  stream.py
motofw/src/utils/: __init__.py  downloader.py  filename.py  models.py
tests/: __init__.py  conftest.py  test_adb.py  test_api.py  test_cli.py  test_client.py  test_config.py  test_crypto.py  test_device.py  test_device_info.py  test_download.py  test_downloader.py  test_models.py  test_ota.py  test_parser.py  test_request_builder.py  test_response_parser.py  test_scanner.py
tests/fixtures/: __init__.py
