[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motofw"
version = "0.2.0"
description = "Query and download OTA firmware updates from Motorola update servers."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "motofw contributors"},
]
keywords = ["motorola", "ota", "firmware", "update"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
motofw = "motofw.src.cli.commands:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["motofw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: marks tests that make live HTTP calls to Motorola servers (deselect with '-m \"not live\"')",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["motofw"]
omit = ["motofw/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
